[workspace.package]
authors = [ "clearloop" ]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/clearloop/crates"
repository = "https://github.com/clearloop/crates.git"
version = "0.0.1"

[workspace]
members = [
  "ccli",
  "conta"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.79"
ccli = { path = "ccli", version = "0.0.1" }
clap = "4.4.18"
color-eyre = "0.6.2"
reqwest = { version = "0.11.24", default-features = false }
semver = "1.0.21"
serde = { version = "1.0.196", default-features = false }
toml = "0.8.9"
toml_edit = "0.21.0"
tracing-subscriber = "0.3.18"

[workspace.metadata.conta]
packages = [
  "ccli",
  "conta"
]
